Modules no longer overlap bottom border

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -79,7 +79,7 @@ window#waybar.chromium {
 #idle_inhibitor,
 #mpd {
     padding: 0 10px;
-    margin: 0 4px;
+    margin: 0 4px 3px 4px;
     color: #ffffff;
 }
 
